<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lopez.collegeassistant.LogInActivityFragment"
    tools:showIn="@layout/activity_log_in">


    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorSecondaryText" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/colorSecondaryText" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:elevation="2dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/log_in"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnSignUpActivity"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="end"
        android:background="@color/colorAccent"
        android:text="@string/sign_up"
        android:textColor="#fff" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_fb_button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtProfileTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/com_facebook_blue"
        android:textColor="#fff"
        android:textSize="16sp" />

</LinearLayout>
